fix align

--- a/src/components/Home/elements/ThirdBanner/styles.module.scss
+++ b/src/components/Home/elements/ThirdBanner/styles.module.scss
@@ -127,6 +127,9 @@ margin: 5rem 5rem 0 0;
     left: 50%;
     transform: translate(-45%, 0);
   }
+  ._container{
+    width: 90%;
+  }
  }
 
 
